[package]
name = "censorbot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tbot = { git = "https://github.com/tbot-rs/tbot/" }
tokio = { version = "1", features = ["macros", "sync", "rt", "rt-multi-thread", "tracing"] }
tracing = "0.1"
tracing-subscriber = "0.2"
rand = "0.8.*"
tokio-postgres = "0.7.5"
meval = "0.2.*"